--- a/style.css
+++ b/style.css
@@ -15,89 +15,111 @@
   --text-font: "Open Sans", sans-serif;
 }
 
-html {
-  font-size: 62.5%;
-}
-
 body {
-  background-color: var(--bg-color);
+  background: var(--bg-color);
+  width: 1280px;
+  min-height: 100vh;
+  margin: 0 auto;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .container {
-  max-width: 110rem;
-  margin: 0 auto;
+  width: 1100px;
 }
 
-.header {
+header {
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  align-items: center;
-  margin-top: 7rem;
-  margin-bottom: 10rem;
+  margin-bottom: 100px;
 }
 
-.header ul {
+nav ul {
   display: flex;
-  align-items: center;
-  gap: 6.4rem;
+  gap: 64px;
 }
 
-.header ul li {
+nav ul li {
   list-style: none;
 }
 
-.header ul li a {
+nav ul li a {
   text-decoration: none;
   color: var(--color-white);
   font-family: var(--title-font);
-  font-weight: 500;
-  font-size: 1.4rem;
-  line-height: 2rem;
 }
 
-main {
+section {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  gap: 8rem;
 }
 
-.right {
-  background-color: red;
+.content {
+  width: 600px;
 }
 
-.left {
-  background-color: blue;
+.content h1 {
+  font-family: var(--title-font);
+  font-weight: 700;
+  font-size: 35px;
+  line-height: 40px;
+  text-align: center;
+  margin-bottom: 60px;
+  color: var(--color-white);
 }
 
-main .right h1 {
+.content h1 span {
+  color: var(--color-green);
+}
+
+.content p {
+  text-align: center;
+
+  font-family: var(--text-font);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+
+  color: var(--color-gray);
+}
+
+.content p:nth-child(2) {
+  margin-bottom: 30px;
+}
+
+.content p strong {
+  font-weight: 700;
+}
+
+.content p span {
+  color: var(--color-green);
+  font-weight: 700;
+}
+
+footer {
+  margin-top: 100px;
+  text-align: center;
   font-family: var(--title-font);
   color: var(--color-white);
-  font-size: 3.6rem;
-  line-height: 4rem;
-  font-weight: 700;
-  margin-bottom: 4rem;
-  text-align: center;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 28px;
 }
 
-main .right h1 span {
-  color: var(--color-green);
+.line {
+  width: 568px;
+  border: 1px solid var(--color-green);
+  margin: 0 auto;
+  margin-bottom: 30px;
 }
 
-main .right p {
-  text-align: center;
-  font-family: var(--text-font);
-  font-size: 1.6rem;
-  line-height: 2.8rem;
-  color: var(--color-gray);
-  font-weight: 400;
-}
-
-main .right p {
-  margin-bottom: 4rem;
-}
-
-main .right p span {
-  font-weight: 700;
-  color: var(--color-green);
+.padlock {
+  position: fixed;
+  bottom: 150px;
+  left: 400px;
 }
